2024/gihyo-docker-book/k8s/kustomize/echo/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  # labels:
    # app.kubernetes.io/name: echo
spec:
  replicas: 1
  # selector:
    # matchLabels:
      # app.kubernetes.io/name: echo
  template:
    metadata:
      # labels:
        # app.kubernetes.io/name: echo
    spec:
      containers:
      - name: nginx
        image: ghcr.io/gihyodocker/simple-nginx-proxy:v0.1.0
        ports:
        - name: http
          containerPort: 80
      - name: echo
        image: ghcr.io/gihyodocker/echo:v0.1.0
